Improve annotation inference